--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -40,7 +40,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:alpha="0"
-        android:text="Pakman"
+        android:text="Motoflash"
         android:textColor="@color/colorWhite"
         android:textSize="32sp"
         android:textStyle="bold"
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:alpha="0"
         tools:alpha="1"
-        android:text="Para entregadores"
+        android:text="Entregas com logística"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
         android:textStyle="bold"
