--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,8 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="BlueText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorBlue</item>
+    </style>
 </resources>
