--- a/core/src/main/res/layout/list_workorder.xml
+++ b/core/src/main/res/layout/list_workorder.xml
@@ -127,6 +127,8 @@
                 android:id="@+id/txtStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:background="@drawable/rectangle_cornes_gray"
                 android:backgroundTint="@color/colorBlue"
                 android:textColor="@color/colorWhite"
