--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -71,15 +71,31 @@
                 android:id="@+id/progressBar"
                 android:visibility="gone"/>
 
-            <Button
-                android:id="@+id/btnNewPoint"
-                style="@style/ColoredButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:text="Novo Ponto"
-                android:textAllCaps="false" />
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="horizontal"
+             android:layout_marginTop="10dp"
+             android:gravity="center">
+             <Button
+                 android:id="@+id/btnNewPoint"
+                 style="@style/ColoredButton"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="center"
+                 android:text="Novo Ponto"
+                 android:layout_marginEnd="10dp"
+                 android:textAllCaps="false" />
+
+             <Switch
+                 android:id="@+id/btnMotorcycle"
+                 android:layout_width="wrap_content"
+                 android:layout_marginStart="10dp"
+                 android:layout_height="wrap_content"
+                 android:checked="true"
+                 android:textColor="@color/colorBlue"
+                 android:text="Motoboy " />
+         </LinearLayout>
 
             <Button
                 android:id="@+id/btnCreate"
